New files for css and js update!

--- a/sales_order.html
+++ b/sales_order.html
@@ -10,6 +10,7 @@
                 data-sap-ui-theme="sap_bluecrystal">
         </script>
         <link rel="stylesheet" href="css/eoa_theme.css" type="text/css" media="all">
+        <link rel="stylesheet" href="css/product_info.css" type="text/css" media="all">
         <script src="js/eoa.library/eoa.binding.js"></script>
         <script src="js/eoa.library/eoa.d.controls.js"></script>
         <script src="js/eoa.library/eoa.m.controls.js"></script>
