--- a/sales_order.html
+++ b/sales_order.html
@@ -15,7 +15,9 @@
         <script src="js/eoa.library/eoa.d.controls.js"></script>
         <script src="js/eoa.library/eoa.m.controls.js"></script>
         <script src="js/eoa.library/eoa.ws.function.js"></script>
+        <script src="json/customers.js"></script>
         <script src="js/sales_order.js"></script>
+
         <script>
         
             function global(){
